feat: VO를 이용해 양방향 연관관계를 클래스로 생성