@@ -1,8 +1,8 @@
 package kr.pickple.back.crew.service;
 
+import kr.pickple.back.common.domain.RegistrationStatus;
 import kr.pickple.back.crew.domain.Crew;
 import kr.pickple.back.crew.domain.CrewMember;
-import kr.pickple.back.crew.dto.CrewMemberRelationDto;
 import kr.pickple.back.crew.dto.request.CrewApplyRequest;
 import kr.pickple.back.crew.dto.response.CrewProfileResponse;
 import kr.pickple.back.crew.exception.CrewException;
@@ -10,6 +10,7 @@ import kr.pickple.back.crew.exception.CrewExceptionCode;
 import kr.pickple.back.crew.repository.CrewMemberRepository;
 import kr.pickple.back.crew.repository.CrewRepository;
 import kr.pickple.back.member.domain.Member;
+import kr.pickple.back.member.dto.response.MemberResponse;
 import kr.pickple.back.member.exception.MemberException;
 import kr.pickple.back.member.repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
@@ -18,10 +19,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static kr.pickple.back.common.domain.RegistrationStatus.CONFIRMED;
-import static kr.pickple.back.common.domain.RegistrationStatus.WAITING;
 import static kr.pickple.back.crew.exception.CrewExceptionCode.CREW_MEMBER_ALREADY_EXISTED;
 import static kr.pickple.back.crew.exception.CrewExceptionCode.CREW_NOT_FOUND;
 import static kr.pickple.back.member.exception.MemberExceptionCode.MEMBER_NOT_FOUND;
@@ -45,12 +44,11 @@ public class CrewMemberService {
         final CrewMember crewMember = CrewMember.builder()
                 .crew(crew)
                 .member(member)
-                .status(WAITING)
                 .build();
         crewMemberRepository.save(crewMember);
     }
 
-    public CrewProfileResponse findAllApplyForCrewMemberShip(final Long crewId, final String status) {
+    public CrewProfileResponse findAllCrewMembers(final Long crewId, final RegistrationStatus status) {
         final Crew crew = findByExistCrew(crewId);
         final List<CrewMember> crewMemberList;
         //TODO:추후, 크루장인지 검증 로직 추가(11월 2일,소재훈)
@@ -59,13 +57,14 @@ public class CrewMemberService {
             throw new CrewException(CrewExceptionCode.CREW_MEMBER_ALREADY_EXISTED);
         }
 
-        crewMemberList = crewMemberRepository.findCrewMemberByStatusAndCrewId(WAITING, crewId);
+        final List<Member> members = crew.getCrewMembers().getCrewMembers(status);
 
-        final List<CrewMemberRelationDto> crewMemberRelationDtoList = crewMemberList.stream()
-                .map(CrewMemberRelationDto::fromEntity)
-                .collect(Collectors.toList());
+        final List<MemberResponse> crewMemberResponses = members.stream()
+                .map(MemberResponse::from)
+                .toList();
 
-        return CrewProfileResponse.fromEntity(crew, crewMemberRelationDtoList);
+
+        return CrewProfileResponse.fromEntity(crew, crewMemberResponses);
     }
 
     private Crew findByExistCrew(final Long crewId) {
